[Password Manager] Call FetchDataFromPasswordStore for new password form manager, if there was no corresponding form manager.

Also removes "manager->set_has_generated_password(true)" in PasswordManager::SetGenerationElementAndReasonForForm, because it is just setting generation element, the password hasn't been generated yet.

BUG=601013

Review URL: https://codereview.chromium.org/1863073002

Cr-Commit-Position: refs/heads/master@{#385762}

Former-commit-id: 35ecc03672a8405f2fea544dbe846518d1a6e4cf